<resources>
    <string name="app_name">just notes</string>
    <string name="name_note1">Заметка1</string>
    <string name="name_note2">Заметка2</string>
    <string name="name_note3">Заметка3</string>
    <string name="body_name_note1">Заметка1_тело_описание_заметки</string>
    <string name="body_name_note2">Заметка2_тело_описание_заметки</string>
    <string name="body_name_note3">Заметка3_тело_описание_заметки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_menu">BottomMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="your_notes">Your notes</string>
    <string name="create">Create</string>
    <string name="info">info</string>
    <string name="new_note">Новая заметка</string>
</resources>