<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu_notes"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/your_notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_create_note"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/login"
        app:showAsAction="ifRoom" />


</menu>